Opened 13 years ago

Closed 13 years ago

#2979 closed defect (fixed)

wmalossless: deadlock with fuzzed file

Reported by: ami_stuff Owned by:
Priority: important Component: avcodec
Version: git-master Keywords: wmalossless deadlock
Cc: Blocked By:
Blocking: Reproduced by developer: yes
Analyzed by developer: no

Description

(gdb) r -i ./deadlock.wmv -vn -f null -
The program being debugged has been started already.
Start it from the beginning? (y or n) y

Starting program: /media/sdb1/ffmpeg-HEAD-93439e8/ffmpeg_g -i ./deadlock.wmv -vn -f null -
[Thread debugging using libthread_db enabled]
Using host libthread_db library "/lib/i386-linux-gnu/libthread_db.so.1".
ffmpeg version 2.0-93439e8 Copyright (c) 2000-2013 the FFmpeg developers
  built on Sep 18 2013 23:23:15 with gcc 4.7 (Debian 4.7.2-5)
  configuration: --disable-yasm --enable-gpl --disable-ffprobe --disable-ffserver
  libavutil      52. 44.100 / 52. 44.100
  libavcodec     55. 31.101 / 55. 31.101
  libavformat    55. 18.100 / 55. 18.100
  libavdevice    55.  3.100 / 55.  3.100
  libavfilter     3. 86.101 /  3. 86.101
  libswscale      2.  5.100 /  2.  5.100
  libswresample   0. 17.103 /  0. 17.103
  libpostproc    52.  3.100 / 52.  3.100
Input #0, asf, from './deadlock.wmv':
  Metadata:
    title           : EMR Datacenter:  Transaction Recap
    artist          : James Carlburg
    copyright       : © 2004 by James Carlburg
    WMFSDKNeeded    : 0.0.0.0000
    DeviceConformanceTemplate: @
    WM/WMADRCPeakReference: 22602
    WM/WMADRCPeakTarget: 22602
    WM/WMADRCAverageReference: 426
    WM/WMADRCAverageTarget: 131498
    WMFSDKVersion   : 9.00.00.2980
    IsVBR           : 1
    VBR Peak        : 38000
    Buffer Average  : 3088
  Duration: 00:00:39.43, start: 0.000000, bitrate: 101 kb/s
    Stream #0:0(eng): Audio: wmalossless (c[1][0][0] / 0x0163), 44100 Hz, stereo, s16p, 57 kb/s
    Stream #0:1(eng): Video: mss2 (MSS2 / 0x3253534D), rgb24, 800x600, 41 kb/s, 15 tbr, 1k tbn, 1k tbc
[New Thread 0xb7dd1b70 (LWP 6134)]
[New Thread 0xb75d1b70 (LWP 6135)]
[New Thread 0xb6dd1b70 (LWP 6136)]
[New Thread 0xb65d1b70 (LWP 6137)]
[New Thread 0xb5dd1b70 (LWP 6138)]
[New Thread 0xb55d1b70 (LWP 6139)]
[New Thread 0xb4dd1b70 (LWP 6140)]
[New Thread 0xb45d1b70 (LWP 6141)]
[New Thread 0xb3dd1b70 (LWP 6142)]
Output #0, null, to 'pipe:':
  Metadata:
    title           : EMR Datacenter:  Transaction Recap
    artist          : James Carlburg
    copyright       : © 2004 by James Carlburg
    WMFSDKNeeded    : 0.0.0.0000
    DeviceConformanceTemplate: @
    WM/WMADRCPeakReference: 22602
    WM/WMADRCPeakTarget: 22602
    WM/WMADRCAverageReference: 426
    WM/WMADRCAverageTarget: 131498
    WMFSDKVersion   : 9.00.00.2980
    IsVBR           : 1
    VBR Peak        : 38000
    Buffer Average  : 3088
    encoder         : Lavf55.18.100
    Stream #0:0(eng): Audio: pcm_s16le, 44100 Hz, stereo, s16, 1411 kb/s
Stream mapping:
  Stream #0:0 -> #0:0 (wmalossless -> pcm_s16le)
Press [q] to stop, [?] for help

Program received signal SIGINT, Interrupt.
0x0867ab34 in avcodec_decode_audio4 (avctx=avctx@entry=0x9116440, 
    frame=frame@entry=0x915f360, got_frame_ptr=got_frame_ptr@entry=0xbffff504, 
    avpkt=avpkt@entry=0xbffff750) at libavcodec/utils.c:2219
2219	        if (ret >= 0 && *got_frame_ptr) {
(gdb) bt
#0  0x0867ab34 in avcodec_decode_audio4 (avctx=avctx@entry=0x9116440, 
    frame=frame@entry=0x915f360, got_frame_ptr=got_frame_ptr@entry=0xbffff504, 
    avpkt=avpkt@entry=0xbffff750) at libavcodec/utils.c:2219
#1  0x080b562a in decode_audio (ist=ist@entry=0x9117480, 
    pkt=pkt@entry=0xbffff750, got_output=got_output@entry=0xbffff504)
    at ffmpeg.c:1526
#2  0x080b8a40 in output_packet (pkt=0xbffff6e8, ist=0x9117480)
    at ffmpeg.c:1863
#3  process_input (file_index=2) at ffmpeg.c:3089
#4  0x080a3043 in transcode_step () at ffmpeg.c:3185
#5  transcode () at ffmpeg.c:3237
#6  main (argc=<optimized out>, argv=<optimized out>) at ffmpeg.c:3415
(gdb) 

Attachments (1)

deadlock.wmv (488.9 KB ) - added by ami_stuff 13 years ago.

Download all attachments as: .zip

Change History (3)

by ami_stuff, 13 years ago

Attachment: deadlock.wmv added

comment:1 by Carl Eugen Hoyos, 13 years ago

Component: undeterminedavcodec
Keywords: wmalossless deadlock added
Priority: normalimportant
Reproduced by developer: set
Status: newopen
Version: unspecifiedgit-master

comment:2 by Michael Niedermayer, 13 years ago

Resolution: fixed
Status: openclosed
Note: See TracTickets for help on using tickets.